# tmp-lab08

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml  cmake-multi-platformm.yml  deploy.yml  multiplatform_build.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
